--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - ".github/**"
+      - "README.md"
+      - "LICENSE"
+      - "CHANGELOG.md"
   pull_request:
     branches:
       - main
