--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
     paths-ignore:
-      - ".github/**"
+      - "app/**"
+      - "terraform/**"
       - "README.md"
       - "LICENSE"
       - "CHANGELOG.md"
